hphp/test/slow/object/const/not_on_static_prop.php.expectf
Fatal error: Static properties may not be __Const in %s/not_on_static_prop.php on line 4
